# OCR-Demo1

./: CMakeLists.txt  README.md
src/: charactersbar.cc  charactersbar.hh  main.cc  mainwindow.cc  mainwindow.hh  stroke.cc  stroke.hh  strokescene.cc  strokescene.hh
